<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_a"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_b"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_c"
            android:icon="@drawable/ic_save"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_d"
            android:icon="@drawable/nav_about"
            android:title="@string/nav_about" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_e"
                android:icon="@drawable/nav_logout"
                android:title="@string/nav_logout" />
        </menu>
    </item>
</menu>
