<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvForgotPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/tvForgotPasswordMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_message"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/etForgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/forgot_password_email_hint"
        android:inputType="textEmailAddress"
        android:paddingBottom="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/btnForgotPasswordCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:textColor="@color/back_button_background"
            android:text="@string/forgot_password_cancel"/>

        <Button
            android:id="@+id/btnForgotPasswordSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_send"
            android:backgroundTint="@color/accent"
            android:textColor="@color/back_button_background"
            android:layout_marginStart="16dp"/>
    </LinearLayout>

</LinearLayout> 